resolve scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,12 @@ body {
   overflow: hidden;
 }
 
+@media(max-width: 768px) {
+  body {
+    overflow: auto;
+  }
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
